// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maintenance presentation > snapshots narrow color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

[1mProject versions[22m
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

[1mTemplate drift[22m
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state
~ .liftoff/governance/context.json  untouched since generation; template changed

[33m[warn][39m [1mDrift detected[22m: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots narrow no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Project versions
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

Template drift
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state
~ .liftoff/governance/context.json  untouched since generation; template changed

[warn] Drift detected: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots plain doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "LIFTOFF / DOCTOR - Inspect CLI, workstation, project, runtime, and cloud readiness

CLI
[ok] version: Liftoff 0.7.0

Environment
[ok] node: Version 24.20.0
[ok] python: Version 3.14.0
[ok] uv: Version 0.12.7
[ok] docker: Version 27.0.0
[ok] Docker daemon: 27.0.0
[ok] opentofu: Version 1.12.6
[ok] azure-cli: Version 2.70.0
[ok] Azure authentication: Healthy
[ok] openspec: Version 1.11.0
[ok] github-copilot: Version 1.0.0
[warn] GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - Run \`copilot\` and sign in if prompted.

Project
[ok] manifest: valid, 50 artifacts present
[ok] version: generated by 0.7.0, CLI 0.7.0
[ok] repository governance: local single-maintainer-gitflow policy 1 handoff is intact; live enforcement is not inferred
[ok] framework contract: OpenSpec 1.11.0
[ok] selected agents: github-copilot
[ok] framework markers: 1 selected integration verified
[ok] python-fastapi project: stack configuration is valid
[ok] scaffold drift: project matches the current templates

Runtime
[error] .env: missing - copy .env.example to .env
[ok] compose: docker compose config is valid

Cloud - azure
[ok] azure auth: authenticated

[error] Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots plain update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Stage: Apply safe template changes
<project>
Applied changes
- wrote environments/test/backend.env
- wrote infrastructure/opentofu/azure/environments/test.tfvars
- wrote .liftoff/governance/context.json

[ok] Updated project: 3 written, 0 skipped, 0 orphan(s)
Completion
Manifest version: 0.7.0

Next recommended command
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots plain update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Project versions
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

Template drift
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state
~ .liftoff/governance/context.json  untouched since generation; template changed

[warn] Drift detected: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ [1m[36mLIFTOFF / UPDATE[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ [2mReconcile the project with current Liftoff templates[22m                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject versions[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mTemplate drift[39m[22m ─────────────────────────────────────────────────────────────────────────────┐
│ [1mChange  Artifact                                   Reason[22m                                    │
│ [2m──────  ─────────────────────────────────────────  ─────────────────────────────────────────[22m │
│ +       environments/test/backend.env              not present in the recorded state         │
│ +       infrastructure/opentofu/azure/environment  not present in the recorded state         │
│         s/test.tfvars                                                                        │
│ ~       .liftoff/governance/context.json           untouched since generation; template      │
│                                                    changed                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
[33m![39m [1mDrift detected[22m: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots rich doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "┌─ LIFTOFF / DOCTOR ───────────────────────────────────────────────────────────────────────────┐
│ Inspect CLI, workstation, project, runtime, and cloud readiness                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ CLI ────────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ version: Liftoff 0.7.0                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Environment ────────────────────────────────────────────────────────────────────────────────┐
│ ✓ node: Version 24.20.0                                                                      │
│ ✓ python: Version 3.14.0                                                                     │
│ ✓ uv: Version 0.12.7                                                                         │
│ ✓ docker: Version 27.0.0                                                                     │
│ ✓ Docker daemon: 27.0.0                                                                      │
│ ✓ opentofu: Version 1.12.6                                                                   │
│ ✓ azure-cli: Version 2.70.0                                                                  │
│ ✓ Azure authentication: Healthy                                                              │
│ ✓ openspec: Version 1.11.0                                                                   │
│ ✓ github-copilot: Version 1.0.0                                                              │
│ ! GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - │
│ Run \`copilot\` and sign in if prompted.                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project ────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ manifest: valid, 50 artifacts present                                                      │
│ ✓ version: generated by 0.7.0, CLI 0.7.0                                                     │
│ ✓ repository governance: local single-maintainer-gitflow policy 1 handoff is intact; live    │
│ enforcement is not inferred                                                                  │
│ ✓ framework contract: OpenSpec 1.11.0                                                        │
│ ✓ selected agents: github-copilot                                                            │
│ ✓ framework markers: 1 selected integration verified                                         │
│ ✓ python-fastapi project: stack configuration is valid                                       │
│ ✓ scaffold drift: project matches the current templates                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Runtime ────────────────────────────────────────────────────────────────────────────────────┐
│ × .env: missing - copy .env.example to .env                                                  │
│ ✓ compose: docker compose config is valid                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Cloud - azure ──────────────────────────────────────────────────────────────────────────────┐
│ ✓ azure auth: authenticated                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
× Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots rich no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Template drift ─────────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                                   Reason                                    │
│ ──────  ─────────────────────────────────────────  ───────────────────────────────────────── │
│ +       environments/test/backend.env              not present in the recorded state         │
│ +       infrastructure/opentofu/azure/environment  not present in the recorded state         │
│         s/test.tfvars                                                                        │
│ ~       .liftoff/governance/context.json           untouched since generation; template      │
│                                                    changed                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Drift detected: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Apply safe template changes
<project>
┌─ Applied changes ────────────────────────────────────────────────────────────────────────────┐
│ • wrote environments/test/backend.env                                                        │
│ • wrote infrastructure/opentofu/azure/environments/test.tfvars                               │
│ • wrote .liftoff/governance/context.json                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Updated project: 3 written, 0 skipped, 0 orphan(s)
┌─ Completion ─────────────────────────────────────────────────────────────────────────────────┐
│ Manifest version  0.7.0                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots rich update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Template drift ─────────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                                   Reason                                    │
│ ──────  ─────────────────────────────────────────  ───────────────────────────────────────── │
│ +       environments/test/backend.env              not present in the recorded state         │
│ +       infrastructure/opentofu/azure/environment  not present in the recorded state         │
│         s/test.tfvars                                                                        │
│ ~       .liftoff/governance/context.json           untouched since generation; template      │
│                                                    changed                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Drift detected: 3 to write, 0 conflict(s), 0 orphan(s), 48 unchanged
$ liftoff update
",
}
`;
